--- a/ChangeColor/stylesheet.css
+++ b/ChangeColor/stylesheet.css
@@ -1,8 +1,3 @@
-body {
-  padding-top: 100px;
-  background-color: rgb(248, 245, 252);
-}
-
 .boxes {
 
   width: 500px;
@@ -14,25 +9,38 @@ body {
   justify-content: center;
 }
 
-div {
-  text-align:center;
-  width:90px;
-  height: 80px;
+.props {
+
+  margin: 0px auto;
+
+  width: 500px;
+  height: 100px;
+
+  color: #36395A;
+  font-size: 20px;
+  font-weight: 500;
 }
 
-h1 {
+#luminosity {
 
-  position:static;
-  
-  font-size: 40px;
-  color: #3a3d58; 
-  text-align: center;
-  
+  width: auto;
+  height: 50px;
+  margin-top: 1px;
   display: flex;
-  justify-content: center;
-  font-family: "JetBrains Mono",monospace;
+  align-items: center;
 
-  
+  justify-content: center;
+}
+
+
+#coloroptions {
+
+  width: auto;
+  height: 50px;
+  margin-top: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
  #random {
@@ -81,4 +89,26 @@ h1 {
 
 }
 
- 
+body {
+  padding-top: 100px;
+  background-color: rgb(248, 245, 252);
+}
+
+div {
+  text-align:center;
+  width:90px;
+  height: 80px;
+}
+
+h1 {
+
+  position:static;
+  
+  font-size: 40px;
+  color: #3a3d58; 
+  text-align: center;
+  
+  display: flex;
+  justify-content: center;
+  font-family: "JetBrains Mono",monospace; 
+}
