--- a/ChangeColor/stylesheet.css
+++ b/ChangeColor/stylesheet.css
@@ -5,26 +5,39 @@
 }
 .boxes {
 
-  width: 500px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
 
   padding-top: 30px;
-  
-  display:flex;
-  margin: auto;
+  padding-bottom: 30px;
+
+  display: flex;
   justify-content: center;
+  
+  margin: auto;
 }
 
 .props {
 
-  margin: 0px auto;
+  margin: auto;
 
-  width: 500px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
+
+  display: contents;
+  justify-content: center;
 
   color: #36395A;
-  font-size: 20px;
+
+  font-size: 15px;
   font-weight: 500;
+}
+
+
+@media only screen and (min-width: 768px ) {
+  .props {
+    font-size: 20px;
+  }   
 }
 
 #luminosity {
@@ -120,12 +133,25 @@ body {
 
 div {
   text-align:center;
-  width:90px;
-  height: 80px;
+  width: 70px;
+  height: 60px;
   margin: 3px;
-   
+  
   border-radius: 4px;
 }
+
+@media only screen and (min-width: 768px ) {
+  div {
+    text-align:center;
+    width: 90px;
+    height: 80px;
+    margin: 3px;
+   
+    border-radius: 4px;
+  }
+}
+
+
 
 h1 {
 
@@ -133,6 +159,7 @@ h1 {
   padding-top: 80px;
 
   font-size: 40px;
+  font-weight: 500;
   color: #3a3d58; 
   text-align: center;
   
